feat: add customer pagination
